--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
     </div>
 
     <!-- Items -->
-        <ul class="items">
-            <li class="item">
-                <img src="imgs/blue_t.png" alt="" class="item__thumbnail">
-                <span class="item__description">male, large</span>
-            </li>
-        </ul>
+        <ul class="items"></ul>
 </body>
 </html>
